# memsource-cli-client

./: .coveralls.yml  .gitignore  .gitreview  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  project.config  requirements.txt  setup.cfg  setup.py  sonar-project.properties  test-requirements.txt  test.md  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: AbstractProjectDto.md  AbstractProjectDtoV2.md  AddCommentDto.md  AddTargetLangDto.md  AddWorkflowStepsDto.md  AdminProjectManager.md  AdminProjectManagerV2.md  AnalyseDto.md  AnalyseJobDto.md  AnalyseJobReference.md  AnalyseLanguagePartDto.md  AnalyseLanguagePartV2Dto.md  AnalyseSettingsDto.md  AnalyseV2Dto.md  AnalysisApi.md  AnalyticsApi.md  AnalyticsDto.md  AnalyticsResponseDto.md  AndroidSettingsDto.md  AssignVendorDto.md  AssignableTemplatesDto.md  AssignedJobDto.md  AssignmentPerTargetLangDto.md  AsyncAnalyseListResponseDto.md  AsyncAnalyseResponseDto.md  AsyncExportTMDto.md  AsyncExportTMResponseDto.md  AsyncRequestApi.md  AsyncRequestDto.md  AsyncRequestReference.md  AsyncRequestWrapperDto.md  AsyncResponseDto.md  Attribute.md  AuthSchema.md  AuthenticationApi.md  AutomatedProjectSettingsDto.md  BackgroundTasksTbDto.md  BackgroundTasksTmDto.md  BilingualFileApi.md  BrowseRequestDto.md  (+453 more)
memsource_cli/: __init__.py  __main__.py  api_client.py  configuration.py  memsource.py  rest.py
memsource_cli/api/: __init__.py  analysis_api.py  analytics_api.py  async_request_api.py  authentication_api.py  bilingual_file_api.py  business_unit_api.py  client_api.py  connector_api.py  conversations_api.py  domain_api.py  email_template_api.py  file_api.py  import_settings_api.py  job_api.py  machine_translation_api.py  machine_translation_settings_api.py  mapping_api.py  net_rate_scheme_api.py  price_list_api.py  project_api.py  project_reference_file_api.py  project_template_api.py  provider_api.py  quality_assurance_api.py  quote_api.py  scim_api.py  segment_api.py  segmentation_rules_api.py  spell_check_api.py  sub_domain_api.py  supported_languages_api.py  term_base_api.py  translation_api.py  translation_memory_api.py  user_api.py  vendor_api.py  webhook_api.py  workflow_changes_api.py  workflow_step_api.py
memsource_cli/lib/: utils.py
memsource_cli/models/: __init__.py  abstract_project_dto.py  abstract_project_dto_v2.py  add_comment_dto.py  add_target_lang_dto.py  add_workflow_steps_dto.py  admin_project_manager.py  admin_project_manager_v2.py  analyse_dto.py  analyse_job_dto.py  analyse_job_reference.py  analyse_language_part_dto.py  analyse_language_part_v2_dto.py  analyse_settings_dto.py  analyse_v2_dto.py  analytics_dto.py  analytics_response_dto.py  android_settings_dto.py  assign_vendor_dto.py  assignable_templates_dto.py  assigned_job_dto.py  assignment_per_target_lang_dto.py  async_analyse_list_response_dto.py  async_analyse_response_dto.py  async_export_tm_dto.py  async_export_tm_response_dto.py  async_request_dto.py  async_request_reference.py  async_request_wrapper_dto.py  async_response_dto.py  attribute.py  auth_schema.py  (+423 more)
test/: test_abstract_project_dto.py  test_abstract_project_dto_v2.py  test_add_comment_dto.py  test_add_target_lang_dto.py  test_add_workflow_steps_dto.py  test_admin_project_manager.py  test_admin_project_manager_v2.py  test_analyse_dto.py  test_analyse_job_dto.py  test_analyse_job_reference.py  test_analyse_language_part_dto.py  test_analyse_language_part_v2_dto.py  test_analyse_settings_dto.py  test_analyse_v2_dto.py  test_analysis_api.py  test_analytics_api.py  test_analytics_dto.py  test_analytics_response_dto.py  test_android_settings_dto.py  test_assign_vendor_dto.py  test_assignable_templates_dto.py  test_assigned_job_dto.py  test_assignment_per_target_lang_dto.py  test_async_analyse_list_response_dto.py  test_async_analyse_response_dto.py  test_async_export_tm_dto.py  test_async_export_tm_response_dto.py  test_async_request_api.py  test_async_request_dto.py  test_async_request_reference.py  test_async_request_wrapper_dto.py  test_async_response_dto.py  test_attribute.py  test_auth_schema.py  test_authentication_api.py  test_automated_project_settings_dto.py  test_background_tasks_tb_dto.py  test_background_tasks_tm_dto.py  test_bilingual_file_api.py  test_browse_request_dto.py  (+452 more)
(+17 files in other folders)
