[metadata]
name = memsource-cli
description = Unofficial Memsource CLI client
author = Robin Černín
author-email = cerninr@gmail.com
keywords = memsource
home-page = https://github.com/unofficial-memsource/memsource-cli-client/

[entry_points]
console_scripts =
    memsource = memsource_cli.memsource:main

memsource.cli =
    user_get = memsource_cli.user.v2.user:GetUser
    user_create = memsource_cli.user.v2.user:CreateUser
    auth_whoami = memsource_cli.auth.v1.whoami:WhoAmI
    auth_login = memsource_cli.auth.v1.login:Login
    project_list = memsource_cli.project.v1.project:ListProjects
    project_show = memsource_cli.project.v1.project:ShowProject
    project_delete = memsource_cli.project.v1.project:DeleteProject
    project_create = memsource_cli.project.v1.project:CreateProject
    project_template_create = memsource_cli.project.v2.project:CreateProjectFromTemplate
    job_list = memsource_cli.job.v2.job:ListJobs
    job_show = memsource_cli.job.v1.job:ShowJob
    job_create = memsource_cli.job.v1.job:CreateJob
    job_delete = memsource_cli.job.v1.job:DeleteJobs
    job_file_download = memsource_cli.job.v1.job:DownloadJob
    analyse_create = memsource_cli.analysis.v1.analysis:CreateAnalysis
    analyse_delete = memsource_cli.analysis.v1.analysis:DeleteAnalysis
    analyse_language_create = memsource_cli.analysis.v1.analysis:CreateAnalysisByLanguages
    analyse_project_list = memsource_cli.analysis.v2.analysis:ListAnalysisByProject
    analyse_show = memsource_cli.analysis.v2.analysis:ShowAnalysis

[files]
packages = memsource_cli
