[metadata]
name = memsource-cli
description = Unofficial Memsource CLI client
author = Robin Černín
author-email = cerninr@gmail.com
keywords = memsource
home-page = https://github.com/unofficial-memsource/memsource-cli-client/

[entry_points]
console_scripts =
    memsource = memsource_cli.memsource:main

memsource.cli =
    auth_whoami = memsource_cli.auth.v1.whoami:WhoAmI
    auth_login = memsource_cli.auth.v1.login:Login
    project_assign_providers = memsource_cli.project.v1.project:AssignsProvidersFromTemplate
    project_list = memsource_cli.project.v1.project:ListProjects
    project_show = memsource_cli.project.v1.project:ShowProject
    project_delete = memsource_cli.project.v1.project:DeleteProject
    project_create = memsource_cli.project.v1.project:CreateProject
    job_delete = memsource_cli.job.v1.job:DeleteJobs
    job_download = memsource_cli.job.v1.job:DownloadJob
    job_edit = memsource_cli.job.v1.job:EditJob
    jobs_edit = memsource_cli.job.v1.job:EditJobs
    job_list = memsource_cli.job.v2.job:ListJobs
    job_show = memsource_cli.job.v1.job:ShowJob
    job_create = memsource_cli.job.v1.job:CreateJob
    job_translations_delete = memsource_cli.job.v1.job:DeleteTranslations
    analyse_create = memsource_cli.analysis.v1.analysis:CreateAnalysis
    analyse_delete = memsource_cli.analysis.v1.analysis:DeleteAnalysis
    analyse_language_create = memsource_cli.analysis.v1.analysis:CreateAnalysisByLanguages
    analyse_project_list = memsource_cli.analysis.v2.analysis:ListAnalysisByProject
    analyse_show = memsource_cli.analysis.v2.analysis:ShowAnalysis
    template_list = memsource_cli.template.v1.template:ListTemplate
    template_show = memsource_cli.template.v1.template:ShowTemplate
    translation_pre-translate = memsource_cli.translation.v1.translation:PreTranslate
    translation_memory_list = memsource_cli.translation_memory.v1.translation_memory:ListTranslationMemories
    translation_memory_download = memsource_cli.translation_memory.v1.translation_memory:DownloadTranslationMemory
    translation_memory_import = memsource_cli.translation_memory.v1.translation_memory:ImportSegmentTranslationMemory
    translation_memory_search = memsource_cli.translation_memory.v1.translation_memory:WildcardSearchTranslationMemory
    translation_memory_export = memsource_cli.translation_memory.v2.translation_memory:ExportTranslationMemory
    user_create = memsource_cli.user.v2.user:CreateUser
    user_get = memsource_cli.user.v2.user:GetUser
    user_list = memsource_cli.user.v1.user:ListUser


[files]
packages = memsource_cli
